adjust some scss layout issue

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -10,7 +10,7 @@ $hover-background-color: #ff8080;
 $more-btn-color: #fca3a3;
 $navbar-toggle-color: #fff;
 $nav-hover-background-color: #fffef0;
-$nav-dropdown-background-color: #fff;
+$nav-dropdown-background-color: #fffef0;
 $breadcrumb-link-color: #ff8080;
 $normal-text-color: #4a4a4a;
 $nav-font-color: #ffffff;
